--- a/go-server/static/form.html
+++ b/go-server/static/form.html
@@ -9,8 +9,8 @@
 <body>
     <div id="form">
         <form action="/form" method="post">
-            <label>Name</label><input name="name" type="text" value="">
-            <label>Address</label><input type="text" name="address" value="">
+            <label>Name</label><input name="name" type="text" value=""/>
+            <label>Address</label><input type="text" name="address" value=""/>
 
             <input type="submit" value="submit"/>
         </form>
